# CodeRAG

./: .env  .env.example  .gitignore  04_coderag_agent.py  05_local_rag.py  CHANGELOG_v2.2.md  CHANGELOG_v2.5.md  README.md  RELEASE_NOTES_v2.4.md  TEST_REPORT.txt  ablation_report.json  app.py  auto_changelog.py  cache_manager.py  chunk_optimization_report.md  chunks.pkl  embeddings_cache.npy  evaluate_batch.py  evaluate_hyde_only.py  evaluation.py  evaluation_report.json  filter_test_set.py  generate_test_report.py  generate_test_set.py  generate_test_set_batch.py  hyde_module.py  ingest.py  parallel_processor.py  performance_test.py  performance_test_results.json  question_classifier.py  rebuild_vectorstore.py  requirements.txt  rerank_retriever.py  retrieval_core.py  retrieval_plugins.py  semantic_matcher.py  test_auto_changelog.py  test_cpp_engine.py  test_filter_rules.py  (+9 more)
core/: CMakeLists.txt  __init__.py  coarse_engine.cpp  embedder.py  engine.py  env_manager.py  prompt_optimizer.py  reranker.py  run_lock.py
dev_logs/: .~deRag项目改进，增加app.py前端和ingest文件输入格式转换,evaluator和.docx  2026-04-21_CodeRAG本地知识库搭建与全链路踩坑总结.md  2026-04-21_RAG二次升级与测评正确率优化.md  2026-04-21_前端与文档解析管道完善.md  2026-04-22_插件效果逐题对比分析.md  2026-04-22_检索覆盖率优化_插件改进与消融试验.md  2026-04-22_检索链路修复与Hybrid检索接入.md  2026-04-22_消融试验报告_检索插件对比.md  2026-04-22_评估链路优化与参数锁定.md  2026-04-23_异步事件循环错误修复.md  2026-04-23_智能缓存与并行处理架构优化.md  2026-04-23_模型升级Qwen3与Embedding切换.md  2026-04-25_HybridRetriever分词逻辑优化_中英文混合文本处理.md  2026-04-25_功能新增_v2.0.0.md  2026-04-25_文档切分策略优化与实验监控增强.md  2026-04-25_测试集过滤器增强与检索透明度提升.md  CHANGELOG_INDEX.json  (+6 more)
(+137 files in other folders)
